<?xml version="1.0"?>

<package format="2">

  <name>anymal_d</name>
  <version>1.0.11</version>
  <description>ANYmal D Package</description>

  <license>Proprietary</license>

  <author email="rdiethelm@anybotics.com">Remo Diethelm</author>
  <author email="lisler@anybotics.com">Linus Isler</author>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <maintainer email="lisler@anybotics.com">Linus Isler</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>anymal_launch</exec_depend>

</package>
