<?xml version="1.0"?>
<package format="2">
  <name>dynaarm_urdf</name>
  <version>0.0.0</version>
  <description>The dynaarm URDF</description>

  <maintainer email="jichiu@ethz.ch">Jia-Ruei Chiu</maintainer>
  <license>BSD</license>
  <author email="preisigj@student.ethz.ch">Jan Preisig</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>xacro</depend>
  <depend>series_elastic_actuator</depend>
  <depend>robotiq_2f_model</depend>
  <depend>ezgripper_description</depend>
  <depend>psyonic_ability_hand_model</depend>
  <depend>rokubimini_rsl_gazebo_plugin</depend>

</package>
